# mosquitto-cluster

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.txt  Makefile  Mosquitto.podspec  THANKS.txt  appveyor.yml  compiling.txt  config.h  config.mk  mosquitto.conf  readme-windows.txt  readme-zh_cn.md  readme.md  set-version.sh  travis-configure.sh  travis-install.sh
benchmark/bridge-9broker-30000subs-10000X60pubs-payloadlen744-qos0/: report.html  tsung.xml
benchmark/bridge-9brokers-30000subs-10000X300pubs-payloadlen744-qos1/: report.html
benchmark/cluster-9brokers-30000subs-10000X300pubs-payloadlen744-qos1/: graph.html  report.html  tsung.xml
benchmark/cluster-9brokers-30000subs-10000X60pubs-payloadlen744-qos0/: graph.html  report.html  tsung.xml
client/: CMakeLists.txt  Makefile  client_shared.c  client_shared.h  pub_client.c  sub_client.c  sub_client_output.c
doc/historical/: old-regex.txt  topic-match.kds
doc/joss-paper/: codemeta.json  paper.bib  paper.md
docker/: README.md
docker/1.4.10/: Dockerfile  README.md
docker/1.4.12/: Dockerfile  README.md
docker/1.4.14/: Dockerfile  README.md
docker/1.4.4/: Dockerfile  README.md
docker/1.4.8/: Dockerfile  README.md
examples/mysql_log/: mysql_log.c
examples/subscribe_simple/: Makefile  callback.c  multiple.c  single.c
examples/temperature_conversion/: main.cpp
installer/: mosquitto.nsi  mosquitto64.nsi
lib/: CMakeLists.txt  Makefile  handle_connack.c  handle_ping.c  handle_pubackcomp.c  handle_publish.c  handle_pubrec.c  handle_pubrel.c  handle_suback.c  handle_unsuback.c  helpers.c  linker.version  logging_mosq.c  logging_mosq.h  memory_mosq.c  memory_mosq.h  messages_mosq.c  messages_mosq.h  mosquitto.c  mosquitto.h  mosquitto_internal.h  mqtt3_protocol.h  net_mosq.c  net_mosq.h  options.c  packet_mosq.c  packet_mosq.h  read_handle.c  read_handle.h  read_handle_shared.c  send_connect.c  send_disconnect.c  send_mosq.c  send_mosq.h  send_publish.c  send_subscribe.c  send_unsubscribe.c  socks_mosq.c  socks_mosq.h  srv_mosq.c  (+10 more)
lib/cpp/: CMakeLists.txt  Makefile  mosquittopp.cpp  mosquittopp.h
man/: Makefile  libmosquitto.3.xml  mosquitto-tls.7.xml  mosquitto.8.xml  mosquitto.conf.5.xml  mosquitto_passwd.1.xml  mosquitto_pub.1.xml  mosquitto_sub.1.xml  mqtt.7.xml
misc/currentcost/: cc128_log_mysql.pl  cc128_parse.pl  cc128_read.pl  cc128_read.py
misc/currentcost/gnome-panel/: CurrentCostMQTT.py
service/systemd/: mosquitto.service.notify  mosquitto.service.simple
snap/: mosquitto.conf  snapcraft.yaml
src/: CMakeLists.txt  Makefile  bridge.c  cluster.c  conf.c  conf_includedir.c  context.c  database.c  handle_connack.c  handle_connect.c  handle_private.c  handle_publish.c  handle_subscribe.c  handle_unsubscribe.c  lib_load.h  linker-macosx.syms  linker.syms  logging.c  loop.c  mosquitto.c  mosquitto_broker.h  mosquitto_broker_internal.h  mosquitto_passwd.c  mosquitto_plugin.h  net.c  persist.c  persist.h  plugin.c  plugin_defer.c  read_handle.c  security.c  security_default.c  send_connack.c  send_private.c  send_suback.c  service.c  signals.c  subs.c  sys_tree.c  sys_tree.h  (+2 more)
src/db_dump/: db_dump.c
test/: Makefile  mosq_test.py  msgsps_common.h  msgsps_pub.c  msgsps_sub.c  packet-gen.c
test/broker/: 01-connect-anon-denied.py  01-connect-invalid-id-0-311.py  01-connect-invalid-id-0.py  01-connect-invalid-id-missing.py  01-connect-invalid-id-utf8.py  01-connect-invalid-protonum.py  01-connect-invalid-reserved.py  01-connect-success.py  01-connect-uname-invalid-utf8.py  01-connect-uname-no-flag.py  01-connect-uname-no-password-denied.py  01-connect-uname-password-denied.py  01-connect-uname-password-success-no-tls.conf  01-connect-uname-password-success-no-tls.py  01-connect-uname-password-success.py  01-connect-uname-pwd-no-flag.py  02-subpub-qos0.py  02-subpub-qos1.py  02-subpub-qos2.py  02-subscribe-invalid-utf8.py  02-subscribe-qos0.py  02-subscribe-qos1.py  02-subscribe-qos2.py  02-unsubscribe-invalid-no-topic.py  02-unsubscribe-qos0.py  02-unsubscribe-qos1.py  02-unsubscribe-qos2.py  03-pattern-matching-helper.py  03-pattern-matching.py  03-publish-b2c-disconnect-qos1-helper.py  03-publish-b2c-disconnect-qos1.py  03-publish-b2c-disconnect-qos2-helper.py  03-publish-b2c-disconnect-qos2.py  03-publish-b2c-timeout-qos1-helper.py  03-publish-b2c-timeout-qos1.py  03-publish-b2c-timeout-qos2-helper.py  03-publish-b2c-timeout-qos2.py  03-publish-c2b-disconnect-qos2.py  03-publish-c2b-timeout-qos2.py  03-publish-invalid-utf8.py  (+58 more)
test/broker/c/: 08-tls-psk-bridge.c  08-tls-psk-pub.c  Makefile  auth_plugin.c  auth_plugin_acl.c  auth_plugin_pwd.c  auth_plugin_v2.c  mosquitto_plugin_v2.h
test/lib/: 01-con-discon-success.py  01-keepalive-pingreq.py  01-no-clean-session.py  01-unpwd-set.py  01-will-set.py  01-will-unpwd-set.py  02-subscribe-qos0.py  02-subscribe-qos1.py  02-subscribe-qos2.py  02-unsubscribe.py  03-publish-b2c-qos1.py  03-publish-b2c-qos2.py  03-publish-c2b-qos1-disconnect.py  03-publish-c2b-qos1-timeout.py  03-publish-c2b-qos2-disconnect.py  03-publish-c2b-qos2-timeout.py  03-publish-c2b-qos2.py  03-publish-qos0-no-payload.py  03-publish-qos0.py  04-retain-qos0.py  08-ssl-bad-cacert.py  08-ssl-connect-cert-auth-enc.py  08-ssl-connect-cert-auth.py  08-ssl-connect-no-auth.py  08-ssl-fake-cacert.py  09-util-topic-matching.py  09-util-topic-tokenise.py  09-util-utf8-validate.py  Makefile  ptest.py
test/lib/c/: 01-con-discon-success.c  01-keepalive-pingreq.c  01-no-clean-session.c  01-unpwd-set.c  01-will-set.c  01-will-unpwd-set.c  02-subscribe-qos0.c  02-subscribe-qos1.c  02-subscribe-qos2.c  02-unsubscribe.c  03-publish-b2c-qos1.c  03-publish-b2c-qos2.c  03-publish-c2b-qos1-disconnect.c  03-publish-c2b-qos2-disconnect.c  03-publish-c2b-qos2.c  03-publish-qos0-no-payload.c  03-publish-qos0.c  04-retain-qos0.c  08-ssl-connect-cert-auth-enc.c  08-ssl-connect-cert-auth.c  08-ssl-connect-no-auth.c  08-ssl-fake-cacert.c  09-util-topic-matching.c  09-util-utf8-validate.c  Makefile
test/lib/cpp/: 01-con-discon-success.cpp  01-keepalive-pingreq.cpp  (+22 more)
test/ssl/: gen.sh
